move hide details in summary button in mobile to prevent overlap when edit item

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1052,7 +1052,7 @@ textarea.ng-invalid.ng-touched {
   @media only screen and (max-width: 650px) {
     width: 100%;
     min-width: 300px;
-    max-height: calc(100vh - 40px);
+    max-height: calc(100vh - 60px);
     top: 0;
     left: 0;
   }
